# rhythmic-gymnastics_automatic-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/rg_ai/EDA/: eda.py
src/rg_ai/annotation_tools/: annotate_db.py  build_annotation_app.py  db_config.json
src/rg_ai/data_preprocessing/: clip_videos_by_type.py
src/rg_ai/keypoints_pipeline/: config.yaml  extract_keypoints.py  join_all_files.py  make_3d_embeddings.py  movement_classification.py  run_keypoints_pipeline.sh  torch_to_onnx.py  train_test_split.py
src/rg_ai/models/: DSTFormer.py  keypoint_models.py  motionbert.py
src/rg_ai/utils/: bootstrap_utils.py  data_augmentation.py  export_onnx.py  label_consolidation.py  plotting.py  plotting_motionbert.py  skeleton.py  utils_annotations.py  utils_extract_keypoints.py  utils_misc.py
